add: swagger for health endpoint
