# api/docs/swagger.json
@@ -25,6 +25,32 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Perform healthcheck.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Perform healthcheck",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Health"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Health"
+                        }
+                    }
+                }
+            }
+        },
         "/songs": {
             "get": {
                 "description": "Get all songs.",
@@ -237,6 +263,15 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "Health": {
+            "description": "Health model",
+            "type": "object",
+            "properties": {
+                "healthy": {
+                    "type": "boolean"
                 }
             }
         },
