# api/models/health.go
@@ -1,0 +1,7 @@
+package models
+
+// Health godoc
+// @Description Health model
+type Health struct {
+	Healthy bool `json:"healthy"`
+} //@name Health
